--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@sweetalert2/theme-dark": "^5.0.16",
     "primeng": "^17.14.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.8",
