--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@sweetalert2/theme-dark": "^5.0.16",
+    "emailjs-com": "^3.2.0",
+    "ng-block-ui": "^4.0.1",
+    "ngx-spinner": "^16.0.2",
     "primeng": "^17.14.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.8",
