cambios de la experiencia

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@sweetalert2/theme-dark": "^5.0.16",
-    "primeng": "^17.14.1",
+    "david-ui-angular": "^1.1.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.15.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.8",
     "tslib": "^2.3.0",
