--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.3.0",
     "@sweetalert2/theme-dark": "^5.0.16",
     "david-ui-angular": "^1.1.0",
+    "emailjs-com": "^3.2.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.15.0",
     "rxjs": "~7.8.0",
