--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sweetalert2/theme-dark": "^5.0.16",
     "david-ui-angular": "^1.1.0",
     "emailjs-com": "^3.2.0",
+    "ngx-cookie-service": "^17.1.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.15.0",
     "rxjs": "~7.8.0",
@@ -32,7 +33,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.5",
-    "@angular/cli": "^17.3.5",
+    "@angular/cli": "^20.1.6",
     "@angular/compiler-cli": "^17.3.0",
     "@angular/localize": "^17.3.5",
     "@types/jasmine": "~5.1.0",
